# src/auth/auth-routes.js
@@ -1,14 +1,11 @@
 module.exports = app => {
     const auth = require('./auth-controller');
-    const game = require('./game-controller');
     const router = require('express').Router();
     const jwtMiddleware = require('./jwt-middleware');
 
     router.post("/register", auth.register);
 
     router.post("/sign-in", auth.signIn);
-
-    router.post("/add-game", game.addGame);
 
     router.get("/me", jwtMiddleware.checkJwtTokenMiddleware, auth.getCurrentUser)
 
