# swagger_output.json
@@ -221,40 +221,48 @@
     "/add-game": {
       "post": {
         "tags": [
-          "Auth"
+          "Games"
         ],
-        "summary": "Service to add a new Nintendo Switch game",
-        "description": "Service to add a new Nintendo Switch game to the library.",
+        "summary": "Service to create a new game ",
+        "description": "Service to create a new game",
         "parameters": [
           {
-            "name": "game",
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "The Legend of Zelda : Breath of The Wild"
+                "gameId": {
+                  "example": "any"
+                },
+                "gameName": {
+                  "example": "any"
                 },
                 "publisher": {
-                  "example": "Nintendo"
+                  "example": "any"
                 },
                 "players": {
-                  "example": "Single System (1)"
+                  "example": "any"
                 },
                 "languages": {
-                  "example": "German, English, Spanish, French, Italian, Japanese"
+                  "example": "any"
                 },
                 "categories": {
-                  "example": "Action, Adventure"
+                  "example": "any"
                 },
                 "releaseDate": {
-                  "example": "08/12/2017"
+                  "example": "any"
                 },
                 "ageRating": {
-                  "example": "PEGI 12"
+                  "example": "any"
                 },
                 "compatibleControllers": {
-                  "example": "Nintendo Switch Pro Controller"
+                  "example": "any"
                 }
               }
             }
@@ -264,13 +272,192 @@
           "201": {
             "description": "Created"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "403": {
             "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/update-game": {
+      "put": {
+        "tags": [
+          "Games"
+        ],
+        "summary": "Service to update a game",
+        "description": "Service to update a game",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "gameId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/get-all-games": {
+      "get": {
+        "tags": [
+          "Games"
+        ],
+        "summary": "Service to get all menus from the database",
+        "description": "Service to get all menus from the database authorization needed admin=false/true",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/get-a-game": {
+      "get": {
+        "tags": [
+          "Games"
+        ],
+        "summary": "Service to get a gamee",
+        "description": "Service to get a game",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "gameId",
+            "in": "path",
+            "description": "ID of game",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/delete-game": {
+      "delete": {
+        "tags": [
+          "Games"
+        ],
+        "summary": "Service to delete a game ",
+        "description": "Service to delete a game",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "gameId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
